--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=7.0",
-        "laravel/framework": "^5.2"
+        "laravel/framework": "^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
