--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
+        "php": "^8.0",
         "laravel/framework": "^8.0|^9.0"
     },
     "autoload": {
